--- a/Pindi.Api/appsettings.json
+++ b/Pindi.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PindiDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PindiDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:pindi.database.windows.net,1433;Database=PindiDatabase;User ID=HeriKarata;Password=Hmkmkombe2.;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;"
   },
   "Logging": {
     "LogLevel": {
